--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "ng test"
   },
   "private": true,
+  "homepage": "https://raluciure.github.io/BookCorner/",
   "dependencies": {
     "@angular/animations": "^14.3.0",
     "@angular/cdk": "^15.2.8",
